--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -23,11 +23,11 @@
 ||TA04 ||Criação da página de login HTML(view)||I01 ||Essencial ||2h || ||Cláudia ||Feito ||
 ||TA05 ||Formatação dos campos de login||I01 ||Desejável ||2h || ||Cláudia ||Feito ||
 ||TA06 ||Tratamento de erros de login||I01 ||Essencial ||4h || ||Cláudia ||Feito ||
-||TA07 ||Implementar algoritmo de criptografia de dados ||I01 ||Essencial ||2h || ||Arnaldo ||Em andamento* ||
+||TA07 ||Implementar algoritmo de criptografia de dados ||I01 ||Essencial ||2h || ||Arnaldo ||Em andamento^1^ ||
 ||TEMPO TOTAL|||||| ||22h || ||
 <br>
 
-* Atualmente Grails não fornece qualquer aplicação para isso. Existem plugins de segurança múltiplas, incluindo [http://grails.org/plugin/spring-security-core Spring Security], [http://incubator.apache.org/shiro/index.html Shiro], e [http://grails.org/plugin/authentication Authentication], e se suas necessidades são muito simples você pode proteger seu aplicativo com filtros Grails.
+^1^ Atualmente Grails não fornece qualquer aplicação para isso. Existem plugins de segurança múltiplas, incluindo [http://grails.org/plugin/spring-security-core Spring Security], [http://incubator.apache.org/shiro/index.html Shiro], e [http://grails.org/plugin/authentication Authentication], e se suas necessidades são muito simples você pode proteger seu aplicativo com filtros Grails.
 
 
 <br>
