--- a/wiki/Iteration.wiki
+++ b/wiki/Iteration.wiki
@@ -15,9 +15,9 @@ Mostra as iterações do projeto.
 
 ||<b>Iteração</b>||<b>[UserStory User Stories]</b>||<b>Tarefas</b>||[Release Release] ||<b>Dt início</b>||<b>Dt limite</b>||<b>Status</b>||
 ||I01 ||[UserStory#US01 US01]||ta01 a ta07 ||re01 ||20/09/2010||04/10/2010||Iniciado||
-||I02 ||[UserStory#US02 US02], [UserStory#US03 US03], [UserStory#US04 US04]||ta08 a ta24 ||re01 ||04/10/2010||18/10/2010||Esperando||
-||I03 ||[UserStory#US04 US04], [UserStory#US05 US05]||ta25 a ta30 ||re01 ||18/10/2010||03/11/2010||Esperando||
-||I04 ||[UserStory#US05 US05] ||ta31 a ct10 ||re02 ||03/11/2010||17/11/2010||Esperando||
-||I05 ||[UserStory#US06 US06]||ta33 a ct12 ||re02 ||17/11/2010||29/11/2010||Esperando||
+||I02 ||[UserStory#US02 US02]||ta08 a ta24 ||re01 ||04/10/2010||18/10/2010||Esperando||
+||I03 ||[UserStory#US03 US03], [UserStory#US05 US05]||ta25 a ta30 ||re01 ||18/10/2010||03/11/2010||Esperando||
+||I04 ||[UserStory#US04 US04] ||ta31 a ct10 ||re02 ||03/11/2010||17/11/2010||Esperando||
+||I05 ||[UserStory#US05 US05]||ta33 a ct12 ||re02 ||17/11/2010||29/11/2010||Esperando||
 
 <b>ct</b> - Caso de Teste
