Edited wiki page UserStory through web user interface.

--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -38,11 +38,11 @@
 
 
 ||<b>Tarefa</b>||<b>Descricao</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||<b>Responsável</b>||
-||TA09 ||Criar tela Alteração de Senha||I02 ||Essencial ||2h || || ||
-||TA10||Implementar tela Alteração de Senha (view)||I02 ||Essencial ||2h || || ||
-||TA11||Implementar modelo para Alteração de Senha||I02 ||Essencial ||2h || || ||
-||TA12||Implementar controle para Alteração de Senha||I02 ||Essencial ||2h || || ||
-||TA07 ||Criar um mecanismo de ajuda para os usuários que esquecerem a senha ||I02 ||Desejável ||4h || || ||
+||TA08 ||Criar tela Alteração de Senha||I02 ||Essencial ||2h || || ||
+||TA09||Implementar tela Alteração de Senha (view)||I02 ||Essencial ||2h || || ||
+||TA10||Implementar modelo para Alteração de Senha||I02 ||Essencial ||2h || || ||
+||TA11||Implementar controle para Alteração de Senha||I02 ||Essencial ||2h || || ||
+||TA12 ||Criar um mecanismo de ajuda para os usuários que esquecerem a senha ||I02 ||Desejável ||4h || || ||
 ||TA13||Implementar tela de Agendamento de Ausência (view)||I02 ||Essencial ||2h || || ||
 ||TA14||Implementar modelo de Agendamento de Asência ||I02 ||Essencial ||4h || || ||
 ||TA15||Implementar controle(_domains classes_) de Agendamento de Asência ||I02 ||Essencial ||4h || || ||
@@ -55,12 +55,12 @@
 
 <h2>Tela inicial</h2>
 
-||<b>US</b>||<b>Tarefa</b>||<b>Descrição</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||<b>Responsável</b>||
-||US03||TA24||Implementar tela inicial do sistema com informações de:<br>-Criar memorandos, Ofícios;<br>-Localizar Memorandos (enviados, sua rota percorrida e despachos adicionados);  ||I03 ||Essencial ||4h || || ||
-||US03||TA25||Implementar controle para Criar memorandos||I03 ||Essencial ||8h || || ||
-||US03||TA26||Implementar modelo para Criar memorandos||I03 ||Essencial ||8h || || ||
-||US03||TA27||Implementar controle para Localizar Memorandos||I03 ||Essencial ||4h || || ||
-||US03||TA28||Implementar modelo para Localizar Memorandos||I03 ||Essencial ||4h || || ||
+||<b>Tarefa</b>||<b>Descrição</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||<b>Responsável</b>||
+||TA16||Implementar tela inicial do sistema com informações de:<br>-Criar memorandos, Ofícios;<br>-Localizar Memorandos (enviados, sua rota percorrida e despachos adicionados);  ||I03 ||Essencial ||4h || || ||
+||TA17||Implementar controle para Criar memorandos||I03 ||Essencial ||8h || || ||
+||TA18||Implementar modelo para Criar memorandos||I03 ||Essencial ||8h || || ||
+||TA19||Implementar controle para Localizar Memorandos||I03 ||Essencial ||4h || || ||
+||TA20||Implementar modelo para Localizar Memorandos||I03 ||Essencial ||4h || || ||
 ||TEMPO TOTAL|||||||| ||28h || ||
 <br>
 
@@ -70,12 +70,12 @@
 
 <h2>Tramitação do processo</h2>
 
-||<b>US</b>||<b>Tarefa</b>||<b>Descrição</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||<b>Responsável</b>||
-||US04||TA29||Implementar memorandos: individual ou circular; ||I04 ||Essencial ||4h || || ||
-||US04||TA30||Implementar criação de memorando: destinatário, assunto e descrição,<br> arquivos anexos, conferência, número protocolo automático||I04 ||Essencial ||4h || || ||
-||US04||TA31||Implementar Moderação: Alerta de Memorandos Pendentes, Aprovação,<br> Devolução  ||I04 ||Essencial ||8h || || ||
-||US04||TA32||Implementar Trâmite Interno: Caixa Postal com sistema de busca, <br>despachos, mensagens de alerta, notificações por e-mail  ||I04 ||Essencial ||8h || || ||
-||US04||TA33||Implementar Arquivamento: automático para memorandos circulares; <br>manual para memorandos individuais||I04 ||Essencial ||8h || || ||
+||<b>Tarefa</b>||<b>Descrição</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||<b>Responsável</b>||
+||TA21||Implementar memorandos: individual ou circular; ||I04 ||Essencial ||4h || || ||
+||TA22||Implementar criação de memorando: destinatário, assunto e descrição,<br> arquivos anexos, conferência, número protocolo automático||I04 ||Essencial ||4h || || ||
+||TA23||Implementar Moderação: Alerta de Memorandos Pendentes, Aprovação,<br> Devolução  ||I04 ||Essencial ||8h || || ||
+||TA24||Implementar Trâmite Interno: Caixa Postal com sistema de busca, <br>despachos, mensagens de alerta, notificações por e-mail  ||I04 ||Essencial ||8h || || ||
+||TA25||Implementar Arquivamento: automático para memorandos circulares; <br>manual para memorandos individuais||I04 ||Essencial ||8h || || ||
 ||TEMPO TOTAL|||||||| ||32h || ||
 <br>
 
@@ -85,10 +85,10 @@
 
 <h2>Recursos adicionais</h2>
 
-||<b>US</b>||<b>Tarefa</b>||<b>Descrição</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||<b>Responsável</b>||
-||US05||TA34||Implementar Avisos que serão enviados automaticamente por e-mail||<b>I05</b> ||Essencial ||8h || || ||
-||US05||TA35||Implementar Mensagem de Cobrança (visa cobrar o que já foi pedido<br> anteriormente)||I05 ||Essencial ||8h || || ||
-||US05||TA36||Implementar Transferência de Arquivos Anexados||I05 ||Essencial ||12h || || ||
+||<b>Tarefa</b>||<b>Descrição</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||<b>Responsável</b>||
+||TA26||Implementar Avisos que serão enviados automaticamente por e-mail||<b>I05</b> ||Essencial ||8h || || ||
+||TA27||Implementar Mensagem de Cobrança (visa cobrar o que já foi pedido<br> anteriormente)||I05 ||Essencial ||8h || || ||
+||TA28||Implementar Transferência de Arquivos Anexados||I05 ||Essencial ||12h || || ||
 ||TEMPO TOTAL|||||||| ||28h || ||
 
 
