Edited wiki page BigChart through web user interface.

--- a/wiki/BigChart.wiki
+++ b/wiki/BigChart.wiki
@@ -1,4 +1,7 @@
 #summary Gráfico Gerencial.
 
 
-http://memorandos.googlecode.com/files/BigChart.PNG]
+http://memorandos.googlecode.com/files/BigChart.PNG
+
+
+GSP - Groovy Server Pages
