--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -23,7 +23,7 @@
 ||TA04 ||Criação da página de login HTML(view)||I01 ||Essencial ||2h || ||Cláudia ||Feito ||
 ||TA05 ||Formatação dos campos de login||I01 ||Desejável ||2h || ||Cláudia ||Feito ||
 ||TA06 ||Tratamento de erros de login||I01 ||Essencial ||4h || ||Cláudia ||Feito ||
-||TA07 ||Implementar algoritmo de criptografia de dados ||I01 ||Essencial ||2h || ||Arnaldo ||Em andamento^1^ ||
+||TA07 ||Implementar algoritmo de criptografia de dados ||I01 ||Essencial ||2h || ||Arnaldo ||Feito ||
 ||TEMPO TOTAL|||||| ||22h || ||
 <br>
 
