--- a/wiki/Testing.wiki
+++ b/wiki/Testing.wiki
@@ -26,7 +26,7 @@ Aqui serão apontados os casos de testes para validação do sistema.
 
 ||<b>Pré-condição</b>||Estar na tela de login do sistema ||
 ||<b>Pós-condição</b>||Mensagem de erro do sistema ||
-||<b>Detalhe</b>||O ator não informa login inválido e senha válida.<br>O sistema apresenta a mensagem "Login ou senha informados não são válidos"||
+||<b>Detalhe</b>||O ator informa login inválido.<br>O sistema apresenta a mensagem "Login ou senha informados não são válidos"||
 ||<b>Massa de entrada e saída</b>||Uma senha válida||
 ||<b>Ambiente</b>||<b>Sispema Operacional</b>: Windows XP,Vista;<br> <b>Browser</b> firefox 3.6.9, iexplore;<br><b>Servidor de aplicação</b>: Apache Tomcat 6.0 ||
 ||<b>Implementação</b>||Manual ||
@@ -39,7 +39,7 @@ Aqui serão apontados os casos de testes para validação do sistema.
 
 ||<b>Pré-condição</b>||Estar na tela de login do sistema ||
 ||<b>Pós-condição</b>||Mensagem de erro do sistema ||
-||<b>Detalhe</b>||O ator não informa senha inválida.<br>O sistema apresenta a mensagem "Login ou senha informados não são válidos"||
+||<b>Detalhe</b>||O ator informa senha inválida.<br>O sistema apresenta a mensagem "Login ou senha informados não são válidos"||
 ||<b>Massa de entrada e saída</b>||Uma senha válida e login inválido<br>Os sistema apresenta a mensagem "Login ou senha informados não são válidos"||
 ||<b>Ambiente</b>||<b>Sispema Operacional</b>: Windows XP,Vista;<br> <b>Browser</b> firefox 3.6.9, iexplore;<br><b>Servidor de aplicação</b>: Apache Tomcat 6.0 ||
 ||<b>Implementação</b>||Manual ||
@@ -47,6 +47,7 @@ Aqui serão apontados os casos de testes para validação do sistema.
 ||<b>Responsável</b>|| ||
 ||<b>Status</b>||Feito ||
 
+<h3>Senha ou Login em branco</h3>
 
 ||<b>Pré-condição</b>||Estar na tela de login do sistema ||
 ||<b>Pós-condição</b>||Mensagem de erro do sistema ||
@@ -58,3 +59,16 @@ Aqui serão apontados os casos de testes para validação do sistema.
 ||<b>Responsável</b>|| ||
 ||<b>Status</b>||Feito ||
 
+----
+
+<h3>Confirmação de senha incorreta</h3>
+
+||<b>Pré-condição</b>||Estar na tela de alteração de senha ||
+||<b>Pós-condição</b>||Mensagem de erro do sistema ||
+||<b>Detalhe</b>||O ator não ao inserir a nova senha e redigidar a senha no campo de informação, estas não são as mesmas. Foi informado duas senhas diferentesinforma||
+||<b>Massa de entrada e saída</b>|| Não se aplica||
+||<b>Ambiente</b>||<b>Sispema Operacional</b>: Windows XP,Vista;<br> <b>Browser</b> firefox 3.6.9, iexplore;<br><b>Servidor de aplicação</b>: Apache Tomcat 6.0 ||
+||<b>Implementação</b>||Manual ||
+||<b>Iteração</b>||[Iteration I02]||
+||<b>Responsável</b>|| ||
+||<b>Status</b>||Feito ||
