--- a/wiki/Testing.wiki
+++ b/wiki/Testing.wiki
@@ -19,7 +19,7 @@ Aqui serão apontados os casos de testes para validação do sistema.
 ||<b>Ambiente</b>||<b>Sispema Operacional</b>: Windows XP,Vista;<br> <b>Browser</b> firefox 3.6.9, iexplore;<br><b>Servidor de aplicação</b>: Apache Tomcat 6.0 ||
 ||<b>Implementação</b>||Manual ||
 ||<b>Iteração</b>||[Iteration I01]||
-||<b>Responsável</b>|| ||
+||<b>Responsável</b>|| Arnaldo||
 ||<b>Status</b>||Feito ||
 
 <h3>Login inválido</h3>
@@ -31,7 +31,7 @@ Aqui serão apontados os casos de testes para validação do sistema.
 ||<b>Ambiente</b>||<b>Sispema Operacional</b>: Windows XP,Vista;<br> <b>Browser</b> firefox 3.6.9, iexplore;<br><b>Servidor de aplicação</b>: Apache Tomcat 6.0 ||
 ||<b>Implementação</b>||Manual ||
 ||<b>Iteração</b>||[Iteration I01] ||
-||<b>Responsável</b>|| ||
+||<b>Responsável</b>|| Arnaldo||
 ||<b>Status</b>||Feito ||
 
 
@@ -44,31 +44,31 @@ Aqui serão apontados os casos de testes para validação do sistema.
 ||<b>Ambiente</b>||<b>Sispema Operacional</b>: Windows XP,Vista;<br> <b>Browser</b> firefox 3.6.9, iexplore;<br><b>Servidor de aplicação</b>: Apache Tomcat 6.0 ||
 ||<b>Implementação</b>||Manual ||
 ||<b>Iteração</b>||[Iteration I01] ||
-||<b>Responsável</b>|| ||
+||<b>Responsável</b>|| Arnaldo||
 ||<b>Status</b>||Feito ||
 
 <h3>Senha ou Login em branco</h3>
 
 ||<b>Pré-condição</b>||Estar na tela de login do sistema ||
 ||<b>Pós-condição</b>||Mensagem de erro do sistema ||
-||<b>Detalhe</b>||O ator não informa login e senha e seleciona ok<br>O sistema apresenta mensagem "Os campos de login e senha devem ser informados" na tela de login||
+||<b>Detalhe</b>||O ator não informa o login e a senha. Em seguida seleciona ok<br>O sistema apresenta mensagem "Os campos de login e senha devem ser informados" na tela de login||
 ||<b>Massa de entrada e saída</b>|| Não se aplica||
 ||<b>Ambiente</b>||<b>Sispema Operacional</b>: Windows XP,Vista;<br> <b>Browser</b> firefox 3.6.9, iexplore;<br><b>Servidor de aplicação</b>: Apache Tomcat 6.0 ||
 ||<b>Implementação</b>||Manual ||
 ||<b>Iteração</b>||[Iteration I01]||
-||<b>Responsável</b>|| ||
+||<b>Responsável</b>|| Arnaldo||
 ||<b>Status</b>||Feito ||
 
 ----
 
-<h3>Confirmação de senha incorreta</h3>
+<h3>Informação em branco no campo de senha</h3>
 
 ||<b>Pré-condição</b>||Estar na tela de alteração de senha ||
-||<b>Pós-condição</b>||Mensagem de erro do sistema ||
-||<b>Detalhe</b>||O ator não ao inserir a nova senha e redigidar a senha no campo de informação, estas não são as mesmas. Foi informado duas senhas diferentesinforma||
+||<b>Pós-condição</b>||Mensagem de erro do sistema e volta a tela de confirmação de senha ||
+||<b>Detalhe</b>||O ator não informa nenhuma senha||
 ||<b>Massa de entrada e saída</b>|| Não se aplica||
 ||<b>Ambiente</b>||<b>Sispema Operacional</b>: Windows XP,Vista;<br> <b>Browser</b> firefox 3.6.9, iexplore;<br><b>Servidor de aplicação</b>: Apache Tomcat 6.0 ||
 ||<b>Implementação</b>||Manual ||
 ||<b>Iteração</b>||[Iteration I02]||
-||<b>Responsável</b>|| ||
+||<b>Responsável</b>|| Arnaldo||
 ||<b>Status</b>||Feito ||
