--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -60,8 +60,8 @@ Foi dito em reunião com o cliente Leonardo que este requisito - Agendamento de 
 ||TA16||Implementar tela inicial do sistema com informações de:<br>-Criar memorandos, Ofícios;<br>-Localizar Memorandos (enviados, sua rota percorrida e despachos adicionados);  ||I03 ||Essencial ||4h || || || ||
 ||TA17||Implementar controle para Criar memorandos||I03 ||Essencial ||8h || || || ||
 ||TA18||Implementar modelo para Criar memorandos||I03 ||Essencial ||8h || || || ||
-||TA19||Implementar controle para Localizar Memorandos||I03 ||Essencial ||4h || || || ||
-||TA20||Implementar modelo para Localizar Memorandos||I03 ||Essencial ||4h || || || ||
+||TA19||Implementar controle para Localizar Memorandos||I03 ||Essencial ||4h || ||Arnaldo ||Feito ||
+||TA20||Implementar modelo para Localizar Memorandos||I03 ||Essencial ||4h || ||Arnaldo ||Feito ||
 ||TEMPO TOTAL|||||| ||28h || ||
 <br>
 
