--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -24,7 +24,7 @@
 ||TA05 ||Formatação dos campos de login||I01 ||Desejável ||2h || ||Cláudia ||Feito ||
 ||TA06 ||Tratamento de erros de login||I01 ||Essencial ||4h || ||Cláudia ||Feito ||
 ||TA07 ||Implementar algoritmo de criptografia de dados ^1^ ||I01 ||Essencial ||2h || ||Arnaldo ||Feito ||
-||TEMPO TOTAL|||||| ||22h || ||
+||TEMPO TOTAL|||||| ||20h || ||
 <br>
 
 ^1^ Atualmente Grails não fornece qualquer aplicação para isso. Existem plugins de segurança múltiplas, incluindo [http://grails.org/plugin/spring-security-core Spring Security], [http://incubator.apache.org/shiro/index.html Shiro], e [http://grails.org/plugin/authentication Authentication].
@@ -45,7 +45,7 @@
 ||TA13||Implementar tela de Agendamento de Ausência (view)||I02 ||Essencial ||2h || ||Arnaldo ||Descartado ||
 ||TA14||Implementar modelo de Agendamento de Ausência ||I02 ||Essencial ||4h || ||Arnaldo ||Descartado ||
 ||TA15||Implementar controle(_domains classes_) de Agendamento de Ausência ||I02 ||Essencial ||4h || ||Arnaldo ||Descartado ||
-||TEMPO TOTAL|||| || ||20h || || ||
+||TEMPO TOTAL|||| || ||20h || ||
 <br>
 
 Foi dito em reunião com o cliente Leonardo que este requisito - Agendamento de Ausência- deveria ser retirado do sistema.
@@ -62,7 +62,7 @@ Foi dito em reunião com o cliente Leonardo que este requisito - Agendamento de 
 ||TA18||Implementar modelo para Criar memorandos||I03 ||Essencial ||4h || ||Claudia ||Feito ||
 ||TA19||Implementar controle para Localizar Memorandos||I03 ||Essencial ||4h || ||Arnaldo ||Feito ||
 ||TA20||Implementar modelo para Localizar Memorandos||I03 ||Essencial ||4h || ||Arnaldo ||Feito ||
-||TEMPO TOTAL|||||| ||28h || ||
+||TEMPO TOTAL|||||| ||22h || ||
 <br>
 
 ==US04==
@@ -72,11 +72,11 @@ Foi dito em reunião com o cliente Leonardo que este requisito - Agendamento de 
 <h2>Tramitação do processo</h2>
 
 ||<b>Tarefa</b>||<b>Descrição</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||<b>Responsável</b>|| <b>Status</b>||
-||TA21||Implementar memorandos: individual ou circular; ||I04 ||Essencial ||4h || || || ||
-||TA22||Implementar criação de memorando: destinatário, assunto e descrição,<br> arquivos anexos, conferência, número protocolo automático||I04 ||Essencial ||4h || || || ||
-||TA23||Implementar Moderação: Alerta de Memorandos Pendentes, Aprovação,<br> Devolução  ||I04 ||Essencial ||8h || || || ||
-||TA24||Implementar Trâmite Interno: Caixa Postal com sistema de busca, <br>despachos, mensagens de alerta, notificações por e-mail  ||I04 ||Essencial ||8h || || || ||
-||TA25||Implementar Arquivamento: automático para memorandos circulares; <br>manual para memorandos individuais||I04 ||Essencial ||8h || || || ||
+||TA21||Implementar memorandos: individual ou circular; ||I04 ||Essencial ||4h || ||Claudia ||Feito ||
+||TA22||Implementar criação de memorando: destinatário, assunto e descrição,<br> arquivos anexos, conferência, número protocolo automático||I04 ||Essencial ||4h || ||Claudia ||Feito ||
+||TA23||Implementar Moderação: Alerta de Memorandos Pendentes, Aprovação,<br> Devolução  ||I04 ||Essencial ||8h || ||Arnaldo ||Feito ||
+||TA24||Implementar Trâmite Interno: Caixa Postal com sistema de busca, <br>despachos, mensagens de alerta, notificações por e-mail  ||I04 ||Essencial ||8h || ||Arnaldo ||Feito ||
+||TA25||Implementar Arquivamento: automático para memorandos circulares; <br>manual para memorandos individuais||I04 ||Essencial ||8h || ||Cláudia ||Feito ||
 ||TEMPO TOTAL|||||| ||32h || ||
 <br>
 
