--- a/wiki/Iteration.wiki
+++ b/wiki/Iteration.wiki
@@ -1,10 +1,10 @@
 #summary Plano de iterações.
 
-# Planejamento de iterações.
+# Planejamento de iterações de Projeto II.
 
 = Introduction =
 
-Mostra as iterações do projeto.
+Mostra as iterações do projeto memorandos.
 
 
 
@@ -13,16 +13,20 @@ Mostra as iterações do projeto.
 <h3>Aqui mostramos a unidade de planejamento detalhado</h3>
 
 
+
 ==Iteração==
 
-||<b>Iteração</b>||<b>[UserStory User Stories]</b>||<b>Tarefas</b>||[Release Release] ||<b>Dt início</b>||<b>Dt limite</b>||<b>Responsável</b>||<b>Status</b>||
-||I01 ||[UserStory#US01 US01]||ta01 a ta07 ||re01 ||20/09/2010||04/10/2010||Arnaldo ||Finalizado||
-||I02 ||[UserStory#US02 US02]||ta08 a ta15 ||re01 ||04/10/2010||18/10/2010||Arnaldo ||Finalizado||
-||I03 ||[UserStory#US03 US03]||ta16 a ta20 ||re01 ||18/10/2010||03/11/2010||Claudia ||Finalizado||
-||I04 ||[UserStory#US04 US04]||ta21 a ta25 ||re02 ||03/11/2010||17/11/2010||Claudia ||Finalizado||
-||I05 ||[UserStory#US05 US05]||ta26 a ta28 ||re02 ||17/11/2010||29/11/2010||Claudia ||Finalizado||
+||<b>Iteração</b>||<b>[UserStory User Stories]</b>||<b>Tarefas</b>||[Release Release] ||<b>Dt início</b>||<b>Dt limite</b>||
+
+||I01 ||[UserStory#US01 US01]||ta01 a ta07 ||re01 ||21/02/2011||07/03/2011||
+||I02 ||[UserStory#US02 US02]||ta08 a ta15 ||re01 ||07/03/2011||21/03/2011||
+||I03 ||[UserStory#US03 US03]||ta16 a ta20 ||re01 ||21/03/2011||04/04/2011||
+||I04 ||[UserStory#US04 US04]||ta21 a ta25 ||re02 ||04/04/2011||18/04/2011||
+||I05 ||[UserStory#US05 US05]||ta26 a ta28 ||re02 ||18/04/2011||02/05/2011||
+||I06 ||[UserStory#US05 US05]||ta26 a ta28 ||re02 ||02/05/2011||16/05/2011||
+||I07 ||[UserStory#US05 US05]||ta26 a ta28 ||re02 ||16/05/2011||30/05/2011||
+
 
 <br>
 <br>
 <br>
-http://memorandos.googlecode.com/files/EditorMOL.PNG
