--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -8,26 +8,20 @@
 
 ==US01==
 
-<h2>Sistema de autenticação</h2><br>
+<h2>1.	Conclusão das pendências funcionais do Sistema de Memorandos On-Line</h2><br>
 
 
 <br>
-|| <b>US1</b> ||<b>- Login com autenticação (se possível, recuperar senha pelo e-mail);</b><br><b>- Cadastro de usuário;</b>||<b>5 dias</b><br><b>3 dias</b> ||
+|| <b>US1</b> ||<b>- Conclusão de pendências: Envio de despacho, geração de arquivo em PDF e DOC; ||<b>7 dias</b> ||
 
 
 
 ||<b>Tarefa</b>||<b>Descricao</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||<b>Responsável</b>|| <b>Status</b>||
-||TA01 ||Configurar tipos de usuários e suas permissões ||I01 ||Essencial ||2h || ||Arnaldo ||Feito ||
-||TA02 ||Cadastrar Usuários ||I01 ||Essencial ||2h || ||Arnaldo ||Feito ||
-||TA03 ||Criar Banco de Dados ||I01 ||Essencial ||4h || ||Arnaldo ||Feito ||
-||TA04 ||Criação da página de login HTML(view)||I01 ||Essencial ||2h || ||Cláudia ||Feito ||
-||TA05 ||Formatação dos campos de login||I01 ||Desejável ||2h || ||Cláudia ||Feito ||
-||TA06 ||Tratamento de erros de login||I01 ||Essencial ||4h || ||Cláudia ||Feito ||
-||TA07 ||Implementar algoritmo de criptografia de dados ^1^ ||I01 ||Essencial ||2h || ||Arnaldo ||Feito ||
-||TEMPO TOTAL|||||| ||20h || ||
-<br>
+||TA01 ||Salvar memorando em formado PDF com uso de framework iReport||I01 ||Essencial ||12h || ||Arnaldo ||em andamento ||
+||TA02 ||Recuperar memorando e enviar despacho ||I01 ||Essencial ||12h || ||Claudia ||Em andamento ||
+||TA03 ||Executar bateria de testes nos quesitos de segurança e confiabilidade.  ||I01 ||Essencial ||18h || ||Arnaldo/Claudia ||Feito ||
 
-^1^ Atualmente Grails não fornece qualquer aplicação para isso. Existem plugins de segurança múltiplas, incluindo [http://grails.org/plugin/spring-security-core Spring Security], [http://incubator.apache.org/shiro/index.html Shiro], e [http://grails.org/plugin/authentication Authentication].
+<br>
 
 
 <br>
