--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -18,8 +18,8 @@
 
 ||<b>Tarefa</b>||<b>Descricao</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||<b>Responsável</b>|| <b>Status</b>||
 ||TA01 ||Salvar memorando em formado PDF com uso de framework iReport||I01 ||Essencial ||12h || ||Arnaldo ||em andamento ||
-||TA02 ||Recuperar memorando e enviar despacho ||I01 ||Essencial ||12h || ||Claudia ||Em andamento ||
-||TA03 ||Executar bateria de testes nos quesitos de segurança e confiabilidade.  ||I01 ||Essencial ||18h || ||Arnaldo/Claudia ||Feito ||
+||TA02 ||Recuperar memorando e enviar despacho ||I01 ||Essencial ||12h || ||Claudia ||em andamento ||
+||TA03 ||Executar bateria de testes nos quesitos de segurança e confiabilidade.  ||I01 ||Essencial ||24h || ||Arnaldo/Claudia ||em andamento ||
 
 <br>
 
@@ -28,34 +28,23 @@
 
 ==US02==
 
-<h2> Autenticação e Controle:</h2>
+<h2> 2.	Avaliação das funcionalidades do Sistema</h2>
 
 
 ||<b>Tarefa</b>||<b>Descricao</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||<b>Responsável</b>|| <b>Status</b>||
-||TA09||Implementar tela Alteração de Senha (view)||I02 ||Essencial ||2h || ||Claudia ||Feito ||
-||TA10||Implementar modelo para Alteração de Senha||I02 ||Essencial ||2h || ||Claudia ||Feito ||
-||TA11||Implementar controle para Alteração de Senha||I02 ||Essencial ||2h || ||Claudia ||Feito ||
-||TA12 ||Criar um mecanismo de ajuda para os usuários que esquecerem a senha ||I02 ||Desejável ||4h || ||Arnaldo ||Feito ||
-||TA13||Implementar tela de Agendamento de Ausência (view)||I02 ||Essencial ||2h || ||Arnaldo ||Descartado ||
-||TA14||Implementar modelo de Agendamento de Ausência ||I02 ||Essencial ||4h || ||Arnaldo ||Descartado ||
-||TA15||Implementar controle(_domains classes_) de Agendamento de Ausência ||I02 ||Essencial ||4h || ||Arnaldo ||Descartado ||
-||TEMPO TOTAL|||| || ||20h || ||
+||TA04||Executar teste que atendam as necessidades funcionais e não funionais do sistema ||I02 ||Essencial ||12h || ||Arnaldo/Claudia ||espera ||
+||TEMPO TOTAL|||| || ||12h || ||
 <br>
 
-Foi dito em reunião com o cliente Leonardo que este requisito - Agendamento de Ausência- deveria ser retirado do sistema.
 
 ==US03==
 
 <br>
 
-<h2>Tela inicial</h2>
+<h2>3. Interface do Sistema</h2>
 
 ||<b>Tarefa</b>||<b>Descrição</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||<b>Responsável</b>||  <b>Status</b>||
-||TA16||Implementar tela inicial do sistema com informações de:<br>-Criar memorandos, Ofícios;<br>-Localizar Memorandos (enviados, sua rota percorrida e despachos adicionados);  ||I03 ||Essencial ||2h || ||Claudia ||Feito ||
-||TA17||Implementar controle para Criar memorandos||I03 ||Essencial ||4h || ||Claudia ||Feito ||
-||TA18||Implementar modelo para Criar memorandos||I03 ||Essencial ||4h || ||Claudia ||Feito ||
-||TA19||Implementar controle para Localizar Memorandos||I03 ||Essencial ||4h || ||Arnaldo ||Feito ||
-||TA20||Implementar modelo para Localizar Memorandos||I03 ||Essencial ||4h || ||Arnaldo ||Feito ||
+||TA04||Verificar usabilidade do sistema (fácil entendimendo, digitação rápida) ||I02 ||Essencial ||12h || ||Arnaldo/Claudia ||Feito ||
 ||TEMPO TOTAL|||||| ||22h || ||
 <br>
 
