--- a/wiki/UserStory.wiki
+++ b/wiki/UserStory.wiki
@@ -11,10 +11,10 @@
 <h2>1.	Conclusão das pendências funcionais do Sistema de Memorandos On-Line</h2><br>
 
 ||<b>Tarefa</b>||<b>Descricao</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||<b>Responsável</b>|| <b>Status</b>||
-||TA01 ||Salvar memorando em formado PDF com uso de framework iReport||I01 ||Essencial ||12h || ||Arnaldo ||em andamento ||
-||TA02 ||Recuperar memorando e enviar despacho ||I01 ||Essencial ||12h || ||Claudia ||em andamento ||
-||TA03 ||Executar bateria de testes nos quesitos de segurança e confiabilidade.  ||I01 ||Essencial ||24h || ||Arnaldo/Claudia ||em andamento ||
-
+||TA01 ||Salvar memorando em formado PDF com uso de framework iReport||<b>I01</b>||Essencial ||12h || ||Arnaldo ||em andamento ||
+||TA02 ||Recuperar memorando e enviar despacho ||<b>I01</b>||Essencial ||12h || ||Claudia ||em andamento ||
+||TA03 ||Executar bateria de testes nos quesitos de segurança e confiabilidade.  ||<b>I01</b> ||Essencial ||24h || ||Arnaldo/Claudia ||em andamento ||
+||TEMPO TOTAL|||| || ||48h || ||
 <br>
 
 
@@ -26,7 +26,7 @@
 
 
 ||<b>Tarefa</b>||<b>Descricao</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||<b>Responsável</b>|| <b>Status</b>||
-||TA04||Executar teste que atendam as necessidades funcionais e não funionais do sistema ||I02 ||Essencial ||12h || ||Arnaldo/Claudia ||espera ||
+||TA04||Executar teste que atendam as necessidades funcionais e não funionais do sistema ||<b>I02</b>||Essencial ||12h || ||Arnaldo/Claudia ||espera ||
 ||TEMPO TOTAL|||| || ||12h || ||
 <br>
 
@@ -38,7 +38,7 @@
 <h2>3. Interface do Sistema</h2>
 
 ||<b>Tarefa</b>||<b>Descrição</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||<b>Responsável</b>||  <b>Status</b>||
-||TA04||Verificar usabilidade do sistema (fácil entendimendo, digitação rápida) ||I02 ||Essencial ||12h || ||Arnaldo/Claudia ||espera ||
+||TA04||Verificar usabilidade do sistema (fácil entendimendo, digitação rápida) ||<b>I02</b>||Essencial ||12h || ||Arnaldo/Claudia ||espera ||
 ||TEMPO TOTAL|||||| ||12h || ||
 <br>
 
@@ -49,7 +49,7 @@
 <h2>4.	Instalação do Sistema e teste pelos usuários</h2>
 
 ||<b>Tarefa</b>||<b>Descrição</b>||<b>[Iteration Iteração]</b>||<b>Prioridade</b> || <b>Estimado</b>|| <b>Real</b>||<b>Responsável</b>|| <b>Status</b>||
-||TA05||Geração de arquivo .war para deployment devidamente testado ||I03 ||Essencial ||12h || ||Arnaldo/Claudia ||espera ||
+||TA05||Geração de arquivo .war para deployment devidamente testado ||<b>I03</b>||Essencial ||12h || ||Arnaldo/Claudia ||espera ||
 ||TEMPO TOTAL|||||| ||12h || ||
 <br>
 
