--- a/wiki/Release.wiki
+++ b/wiki/Release.wiki
@@ -6,7 +6,7 @@
 
 As _Releases_ foram assim acordadas com o cliente:<br>
 
-Serão duas _Releases_ sendo a primeira ao final da terceira Iteração e a segunda no final da quinta Iteração.
+Serão três _Releases_ sendo a primeira ao final da terceira Iteração, a segunda no final da quinta Iteração e a terceira e última ao final da sétima iteração.
 
 
 = Details =
@@ -15,6 +15,7 @@ Serão duas _Releases_ sendo a primeira ao final da terceira Iteração e a segu
 ==Release==
 
 
-||Release ||Gerente || [Iteration Iteração] ||Periodo ||
-||Re01 ||Cláudia Stevam||I01, I02 e I03 || 20/09/2010 a 03/11/2010||
-||Re02 ||Cláudia Stevam||I03, I04, I05 ||03/11/2010 a  29/11/2010||
+||Release ||Gerente || [Iteration Iteração] ||Data ||
+||Re01 ||Arnaldo Sena||I01, I02 e I03 || 21/03/2011||
+||Re02 ||Arnaldo Sena||I04, I05 ||02/05/2011||
+||Re01 ||Cláudia Stevam||I06, I07|| 30/05/2011||
